SOC-1397 | Discussion editor - Fix letter spacing

--- a/front/main/app/styles/component/_discussion-editor.scss
+++ b/front/main/app/styles/component/_discussion-editor.scss
@@ -21,6 +21,7 @@ $editor-textarea-overflow-ios-hack: 30px;
 		font-size: $type-smallest;
 		font-weight: bold;
 		height: $editor-toolbar-height;
+		letter-spacing: .25px;
 		margin: 0;
 		padding: 0 1.25rem;
 		position: absolute;
